--- a/main.css
+++ b/main.css
@@ -109,3 +109,15 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 p, .p {
     font-weight: 400;
 }
+
+h1, .h1 {
+    font-size: 28px;
+}
+
+h2, .h2 {
+    font-size: 16px;
+}
+
+h3, .h3 {
+    font-size: 14px;
+}
