--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 .container {
     max-width: 1296px;
     margin: 0 auto;
+    padding-left: 23px;
+    padding-right: 23px;
 }
 
 .header {
@@ -207,6 +209,12 @@
     width: fit-content;
     margin-left: 15px;
     margin-top: 16px;
+    transition: all ease 0.3s;
+}
+
+.button:hover {
+    background-color: #323334;
+    color: #ffffff;
 }
 
 @media screen and (max-width:989px) {
@@ -307,3 +315,90 @@
 /* End products */
 
 /* Start Collection */
+.collection {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    height: 566px;
+    gap: 23px;
+
+}
+
+.collection__introduce {
+    background-image: url(./assets/decor.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-blend-mode: hue;
+    background-clip: content-box;
+    background-color: rgba(0,0,0,0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.introduce-text {
+    color: #ffffff;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
+
+.introduce-text a .button {
+    border: 1px #ffffff solid;
+    margin: 0;
+}
+
+.collection__product {
+    position: relative;
+}
+
+.product-title {
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.product-info {
+    margin-top: 33px;
+    padding-left: 4px;
+}
+
+.product-star {
+    padding-top: 13px;
+}
+
+.price {
+    font-size: 24px;
+    font-weight: 700;
+    padding-top: 20px;
+}
+
+.favorite-button {
+    position: absolute;
+    top: 35%;
+    background-color: #ffffff;
+    border-radius: 30px;
+    width: 232px;
+    height: 56px;
+    transform: translateX(25px);
+    
+}
+
+.favorite-button> ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    transform: translateY(9px);
+}
+
+.favorite-button> ul>li a img {
+    height: 19px;
+    width: auto;
+    align-items: center;
+    vertical-align: middle;
+}
+
+.favorite-button> ul> span {
+    font-size: 30px;
+}
